--- a/Sites-Theme-Kigo-Discovery/kd-common/scss/templates/_property-details.scss
+++ b/Sites-Theme-Kigo-Discovery/kd-common/scss/templates/_property-details.scss
@@ -4,7 +4,6 @@
     padding                       : 0;
   }
 
-
   .sl-wrapper .sl-navigation button{
     background-color: rgba(white, .2);
   }
@@ -12,7 +11,7 @@
   /* Hero ---------------------------------------------------------------------*/
   .hero {
     position                      : relative;
-    height                        : 200px;
+    height                        : 300px;
   }
   .hero-image {
     max-width                     : 100%;
@@ -45,12 +44,12 @@
   .amenities-n-buttons {
     background-color: white;
     display                       : block;
-    padding-bottom                : 54px;
+    padding-bottom                : 0;
   }
   /* Top amenities ------------------------------------------------------------*/
   .amenities {
     box-sizing                    : border-box;
-    padding                       : 60px 60px 0;
+    padding                       : 30px;
     ul {
       li {
         margin-bottom         : 13px;
@@ -103,6 +102,7 @@
   .ppt-desc{
     float                     : left;
     box-sizing                : border-box;
+    text-align: justify;
   }
 
   .ppt-images {
@@ -131,9 +131,9 @@
         font-weight       : 100;
         display           : none;
       }
-      > li img{
-        //position        : absolute;
-        max-height        : 100%;
+      > li a{
+        display: block;
+        height: 100%;
       }
     }
 
@@ -210,7 +210,7 @@
     padding                   :  0 15px 15px;
     font-family               : "Montserrat", sans-serif;
     p{
-//      padding                   : 15px;
+      //      padding                   : 15px;
       font-family               : "Montserrat", sans-serif;
       color                     : $tertiary-color;
       font-size                 : 14px;
@@ -234,11 +234,11 @@
 
   /*Property features---------------------------------------------*/
   .property-features {
+    padding: 0 15px;
     margin-top                    : 50px ;
-    padding                       : 0 15px;
     > ul {
       > li {
-        padding               :15px 0;
+        padding               : 15px 0;
         border-top            : 1px solid #ccc;
         position              : relative;
         max-height            : 59px;
@@ -345,7 +345,7 @@
 
 
   span.prop-image.pull-left{
-    margin-right                  : 10px;
+    margin-right: 10px;
   }
 
   #pano {
@@ -413,7 +413,7 @@ Media Tablets horizontal
     }
 
     .book-enq {
-      padding                   : 20px 0px 0 0;
+      padding                   : 20px 0 0 0;
       display                   :inline-block;
       float                     : left;
       width                     : auto;
@@ -440,11 +440,10 @@ Media Tablets horizontal
     }
 
     .property-description {
-      padding-top               : 36px;
+      padding: 0px;
 
     }
     .ppt-images {
-      padding-left              : 15px;
       max-width                 : 63%;
       ul{
         overflow              : hidden;
@@ -514,7 +513,7 @@ Media Tablets horizontal
     .ppt-desc {
       max-width                 :37%;
       box-sizing                : border-box;
-      padding-right             : 15px;
+      padding-right             : 0;
     }
     .ppt-desc-title {
       color                     : #333;
@@ -528,8 +527,7 @@ Media Tablets horizontal
 
     .property-features {
       margin-top                : 50px ;
-      padding                   : 0 15px;
-
+      padding                   : 0;
     }
 
     .amenities-list {
@@ -577,14 +575,14 @@ Media Tablets horizontal
       }
       font-size: 0;
       #poi-map-prop{
-        width: 70%;
+        width: 100%;
         height: 400px;
         display: inline-block;
         font-size: 14px;
       }
       #map-side-bar{
         vertical-align: top;
-        width: 30%;
+        width: 100%;
         display: inline-block;
         font-size: 14px;
       }
@@ -720,12 +718,18 @@ Media Desktop
       font-size                 : 16px;
     }
 
-
-    .ppt-images {
-      padding-left              : 15px;
-    }
     .ppt-desc {
-      padding-right             : 15px;
+      padding-right             : 0;
+    }
+
+    .map-and-locations{
+      #poi-map-prop{
+        width: 70%;
+
+      }
+      #map-side-bar{
+        width: 30%;
+      }
     }
   }
 }
